[gd_scene load_steps=8 format=3 uid="uid://l3r3x7hhjag0"]

[ext_resource type="PackedScene" uid="uid://ckwvhugqpmdun" path="res://Scenes/player.tscn" id="1_erogh"]
[ext_resource type="Script" path="res://Scripts/main.gd" id="1_ibvw8"]
[ext_resource type="PackedScene" uid="uid://dawsu5aqech6x" path="res://Mobs/mob.tscn" id="2_1c3u7"]
[ext_resource type="PackedScene" uid="uid://ciqucbtxqgd40" path="res://Scenes/level_door.tscn" id="2_t3gec"]
[ext_resource type="Texture2D" uid="uid://bvomurfpgfv6g" path="res://Assets/Menus/HeavySleeper.png" id="5_j4y4g"]
[ext_resource type="PackedScene" uid="uid://dbgbho4468p0q" path="res://Scenes/FX/goo.tscn" id="6_oswbm"]

[sub_resource type="Curve2D" id="Curve2D_o12it"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 8, 8, 0, 0, 0, 0, 1152, 8, 0, 0, 0, 0, 1152, 648, 0, 0, 0, 0, 8, 648, 0, 0, 0, 0, 8, 8)
}
point_count = 5

[node name="Main" type="Node2D"]
script = ExtResource("1_ibvw8")
level_door_scene = ExtResource("2_t3gec")
metadata/_edit_vertical_guides_ = [-336.0]

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = 1.0
offset_right = 1156.0
offset_bottom = 651.0
color = Color(0, 0, 0, 1)

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="Player" parent="." instance=ExtResource("1_erogh")]
position = Vector2(563, 309)

[node name="Mob" parent="." instance=ExtResource("2_1c3u7")]
position = Vector2(-21, -21)

[node name="Mob2" parent="." instance=ExtResource("2_1c3u7")]
position = Vector2(1176, -21)

[node name="Mob3" parent="." instance=ExtResource("2_1c3u7")]
position = Vector2(1180, 668)

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.513726)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -377.5
offset_top = -245.0
offset_right = 377.5
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Git gud biiiiiitch"

[node name="ExitButton2" type="Button" parent="GameOver"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.5
offset_top = 211.0
offset_right = 126.5
offset_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Exit Game"

[node name="RestartButton" type="Button" parent="GameOver"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = 82.0
offset_right = 69.0
offset_bottom = 159.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Retry"

[node name="StartMenu" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 5

[node name="ColorRect" type="ColorRect" parent="StartMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ExitButton" type="Button" parent="StartMenu"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.5
offset_top = 180.0
offset_right = 126.5
offset_bottom = 257.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Exit Game"

[node name="StartButton" type="Button" parent="StartMenu"]
unique_name_in_owner = true
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.5
offset_top = 36.0
offset_right = 126.5
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="Sprite2D" type="Sprite2D" parent="StartMenu"]
position = Vector2(595, 176)
scale = Vector2(4.6739, 4.6739)
texture = ExtResource("5_j4y4g")

[node name="LevelDoorPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_o12it")

[node name="LevelDoorSpawnLocation" type="PathFollow2D" parent="LevelDoorPath"]
position = Vector2(8, 8)

[node name="Goo" parent="." instance=ExtResource("6_oswbm")]
position = Vector2(240, 384)

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="pressed" from="GameOver/ExitButton2" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="GameOver/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="StartMenu/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="StartMenu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="StartMenu/StartButton" to="." method="_on_button_pressed"]
